Fix highlight color in dark mode

--- a/css/dark.css
+++ b/css/dark.css
@@ -14,6 +14,10 @@ summary:hover {
 	background-color: #333;
 }
 
+.highlight {
+	color: #333;
+}
+
 /* lighter blues */
 button:focus,
 summary:focus,
